stopped overflow scrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,9 @@
 @theme {
   --color-mint-500: oklch(0.72 0.11 178);
 }
-
+body {
+  overflow-x: hidden;
+}
 
 :root {
   --background: #ffffff;
